codepkg/objects/CWMP_Reimbursement_Request__c.object
<CustomObject>
    <fields>
        <fullName>CWMP_Project__c</fullName>
        <description>Lookup with CWMP Project</description>
        <inlineHelpText>Lookup with CWMP Project</inlineHelpText>
        <label>CWMP Project</label>
        <referenceTo>CWMP_Project__c</referenceTo>
        <relationshipLabel>CWMP Reimbursement Request</relationshipLabel>
        <relationshipName>CWMP_Reimbursement_Request</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Full_Payment_Issued_to_Contractor__c</fullName>
        <description>Full payment been issued to the contractor</description>
        <inlineHelpText>Full payment been issued to the contractor</inlineHelpText>
        <label>Full Payment Issued to Contractor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes</inlineHelpText>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Received_Amount__c</fullName>
        <description>Received Amount</description>
        <inlineHelpText>Received Amount</inlineHelpText>
        <label>Received Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>Received Date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Received Date</inlineHelpText>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Received__c</fullName>
        <description>Reimbursement Received</description>
        <inlineHelpText>Reimbursement Received</inlineHelpText>
        <label>Reimbursement Received?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reimbursement_Requested__c</fullName>
        <description>Reimbursement Requested</description>
        <inlineHelpText>Reimbursement Requested</inlineHelpText>
        <label>Reimbursement Requested?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <description>Requested Amount</description>
        <inlineHelpText>Requested Amount</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <description>Requested Date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Requested Date</inlineHelpText>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <label>CWMP Reimbursement Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CWMP Reimbursement Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CWMP Reimbursement Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>